--- a/ZhouJian/pom.xml
+++ b/ZhouJian/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.ZhouJian</groupId>
     <artifactId>ZhouJian</artifactId>
     <version>1.0-SNAPSHOT</version>
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.21</version>
+    </dependency>
 
+</dependencies>
 
 </project>
