--- a/JavaStudy/pom.xml
+++ b/JavaStudy/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>groupId</groupId>
     <artifactId>JavaStudy</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>PracticalTraining</module>
+    </modules>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
