--- a/ZhouJian/pom.xml
+++ b/ZhouJian/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Project</module>
+        <module>../MyCRM</module>
     </modules>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
